--- a/MCTS/MCTS.csproj
+++ b/MCTS/MCTS.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="FieldType.cs" />
+    <Compile Include="GameState.cs" />
     <Compile Include="Mcts.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
