--- a/TestAndLearning/TestAndLearning.csproj
+++ b/TestAndLearning/TestAndLearning.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FindBetterParameter.cs" />
+    <Compile Include="LearnAgent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
